--- a/tinyERP/tinyERP/Views/DocumentView.xaml
+++ b/tinyERP/tinyERP/Views/DocumentView.xaml
@@ -14,7 +14,7 @@
             <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Style="{StaticResource HoverCircleButton}" Command="{Binding NewDocumentCommand}" ToolTip="Neues Dokument hinzufügen"
                     Content="{iconPacks:PackIconFontAwesome Plus}"/>
-                <Button Style="{StaticResource HoverCircleButton}" Command="{Binding OpenDocumentCommand}" CommandParameter="{Binding ElementName=DocumentsDataGrid}"
+                <Button Style="{StaticResource HoverCircleButton}" Command="{Binding OpenDocumentCommand}" CommandParameter="{Binding SelectedItems, ElementName=DocumentsDataGrid}"
                         ToolTip="Dokument mit dem Standardprogramm öffnen" Content="{iconPacks:PackIconFontAwesome FolderOpen}"/>
             </StackPanel>
 
@@ -27,6 +27,11 @@
                     <DataGridTextColumn MinWidth="100" Width="*" Header="Dateiname" Binding="{Binding RelativePath}"/>
                     <DataGridTextColumn MinWidth="100" Width="*" Header="Ausstellungsdatum" Binding="{Binding IssueDate, StringFormat={}{0:dd.MM.yyyy}}"/>
                 </DataGrid.Columns>
+                <DataGrid.InputBindings>
+                    <KeyBinding Key="Enter"
+                                Command="{Binding OpenDocumentCommand}"
+                                CommandParameter="{Binding SelectedItems, ElementName=DocumentsDataGrid}" />
+                </DataGrid.InputBindings>
             </DataGrid>
         </DockPanel>
     </DockPanel>
