--- a/tinyERP/tinyERP/Views/EditTemplateView.xaml
+++ b/tinyERP/tinyERP/Views/EditTemplateView.xaml
@@ -80,7 +80,7 @@
                 </Button>
                 <Button Grid.Column="2" Style="{DynamicResource SquareButtonStyle}"    
                         BorderThickness="0" ToolTip="Vorlage hochladen" 
-                        Command="{Binding OpenTemplateCommand}"
+                        Command="{Binding UploadTemplateCommand}"
                         CommandParameter="{x:Static resources:TemplateType.Confirmation}">
                     <iconPacks:PackIconMaterial Kind="Upload" />
                 </Button>
