--- a/tinyERP/tinyERP/Resources/HoverCircleButton.xaml
+++ b/tinyERP/tinyERP/Resources/HoverCircleButton.xaml
@@ -1,11 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
+    <system:Double x:Key="IconSizeSmall">12</system:Double>
+    <system:Double x:Key="IconSizeBig">22</system:Double>
+    
     <Style x:Key="HoverCircleButton" BasedOn="{StaticResource MahApps.Metro.Styles.MetroCircleButtonStyle}" TargetType="Button">
         <Setter Property="Background" Value="{StaticResource AccentColorBrush2}" />
         <Setter Property="Width" Value="50" />
         <Setter Property="Height" Value="50" />
-        <Setter Property="Margin" Value="3,0" />
+        <Setter Property="Margin" Value="3.0" />
         <Setter Property="BorderBrush" Value="{StaticResource BlackBrush}" />
         <Setter Property="BorderThickness" Value="2" />
         <Setter Property="Foreground" Value="{StaticResource BlackBrush}" />
@@ -94,9 +98,9 @@
     </Style>
 
     <Style x:Key="HoverCircleButtonChildWindow" BasedOn="{StaticResource HoverCircleButton}" TargetType="Button">
-        <Setter Property="Width" Value="40" />
-        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="30" />
+        <Setter Property="Height" Value="30" />
         <Setter Property="BorderThickness" Value="1" />
     </Style>
-    
+
 </ResourceDictionary>
