--- a/tinyERP/tinyERP/Views/EditCustomerView.xaml
+++ b/tinyERP/tinyERP/Views/EditCustomerView.xaml
@@ -54,9 +54,9 @@
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                 <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Kunde speichern"
                     Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                    Content="{iconPacks:PackIconFontAwesome Check}"/>
+                    Content="{iconPacks:PackIconFontAwesome Check, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                 <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
-                    Content="{iconPacks:PackIconFontAwesome Times}"/>
+                    Content="{iconPacks:PackIconFontAwesome Times, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
             </StackPanel>
         </Grid>
     </DockPanel>
