--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -143,9 +143,9 @@
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                 <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Auftrag speichern"
                         Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                        Content="{iconPacks:PackIconFontAwesome Check}"/>
+                        Content="{iconPacks:PackIconFontAwesome Check, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                 <Button Style="{DynamicResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
-                        Content="{iconPacks:PackIconFontAwesome Times}"/>
+                        Content="{iconPacks:PackIconFontAwesome Times, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
             </StackPanel>
         </Grid>
     </DockPanel>
