--- a/tinyERP/tinyERP/Views/EditTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/EditTransactionView.xaml
@@ -62,9 +62,9 @@
             <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                 <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Buchung speichern"
                         Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                        Content="{iconPacks:PackIconFontAwesome Check}"/>
+                        Content="{iconPacks:PackIconFontAwesome Check, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
                 <Button Style="{StaticResource HoverCircleButtonChildWindow}" ToolTip="Abbrechen" IsCancel="True"
-                        Content="{iconPacks:PackIconFontAwesome Times}"/>
+                        Content="{iconPacks:PackIconFontAwesome Times, Width={StaticResource IconSizeSmall}, Height={StaticResource IconSizeSmall}}"/>
             </StackPanel>
         </Grid>
     </DockPanel>
