--- a/tinyERP/tinyERP/Views/BudgetView.xaml
+++ b/tinyERP/tinyERP/Views/BudgetView.xaml
@@ -34,7 +34,7 @@
             </Border>
         </StackPanel>
 
-        <TabControl Margin="10,50,10,10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
+        <TabControl Margin="10,50,10,10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24" Padding="0" BorderThickness="0">
             <TabItem Header="Budgetübersicht">
                 <DockPanel>
                     <StackPanel DockPanel.Dock="Top" Margin="0,10">
@@ -65,9 +65,6 @@
                         <Button Style="{StaticResource HoverCircleButton}" Command="{Binding DeleteBudgetCommand}" ToolTip="Budget löschen"
                             Content="{iconPacks:PackIconFontAwesome Trash, Width={StaticResource IconSizeBig}, Height={StaticResource IconSizeBig}}"/>
                     </StackPanel>
-                    <Border>
-
-                    </Border>
                     <DockPanel Margin="0,30,0,0">
                         <Label Content="Einnahmen und Ausgaben pro Kategorie" FontWeight="Bold" DockPanel.Dock="Top"/>
                         <lvc:CartesianChart Margin="10">
@@ -88,12 +85,14 @@
             <TabItem Header="Buchungen">
                 <DockPanel Margin="0,10,0,0">
                     <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-                        <TextBox x:Name="SearchBox" Width="200" Height="20" controls:TextBoxHelper.Watermark="Suchbegriff eingeben..." ToolTip="Suche nach Bezeichnung oder Kategorie">
+                        <TextBox Width="250" Height="20" controls:TextBoxHelper.Watermark="Suche nach Bezeichnung oder Kategorie" ToolTip="Suche nach Bezeichnung oder Kategorie"
+                                 Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}">
                             <TextBox.InputBindings>
-                                <KeyBinding Key="Return" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=TextBox}, Path=Text}"></KeyBinding>
+                                <KeyBinding Key="Return" Command="{Binding SearchTransactionsCommand}"></KeyBinding>
                             </TextBox.InputBindings>
                         </TextBox>
-                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0,0,130,0" BorderThickness="0" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding ElementName=SearchBox, Path=Text}" ToolTip="Suche starten">
+                        <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0,0,100,0" BorderThickness="0"
+                                Command="{Binding SearchTransactionsCommand}" ToolTip="Suche starten">
                             <iconPacks:PackIconMaterial Kind="Magnify" Width="20" Height="20" />
                         </Button>
                         <Button Style="{StaticResource HoverCircleButton}" Command="{Binding NewTransactionCommand}" ToolTip="Neue Buchung hinzufügen"
